[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }
bytes = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tempfile = {version = "3.20.0"}
rand = {version = "0.9.2"}